--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
                 const minute = now.getMinutes().toString().padStart(2, '0');
                 const second = now.getSeconds().toString().padStart(2, '0');
 
-                return `${romName.replace(/\..*?$/, '')}_${year}${month}${day}-${hour}${minute}${second}.bin`;
+                return `${romName.replace(/\.[^\.]*$/, '')}_${year}${month}${day}-${hour}${minute}${second}.bin`;
             }
 
             async function saveImage() {
