--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <meta name="viewport" content="width=520,user-scalable=no" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
 
     <title>Cloudpilot</title>
     <style>
